# routes/api.php
@@ -32,4 +32,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::delete('projects/{project}/tasks/{task}', [TaskController::class, 'destroy']);
 });
 
+Route::get('/jobs', [JobController::class, 'index']);
 Route::post('/jobs', [JobController::class, 'store']);
+Route::post('/jobs/{id}/summarize', [JobController::class, 'summarize']);
+Route::get('/jobs/{id}/summary', [JobController::class, 'summary']);
